--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://localhost:8000/",
+  "proxy": "http://api-mathemagics.herokuapp.com/",
+
+
   "private": true,
   "dependencies": {
     "axios": "^0.26.1",
