--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "axios": "^0.26.1",
     "chokidar": "^3.5.3",
     "cra-template": "1.1.3",
-    "darkmode-js": "^1.5.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-js-switch": "^1.1.6",
+    "react-latex": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1"
   },
