--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "cra-template": "1.1.3",
     "mathjax3-react": "^1.1.0",
     "mathjs": "^10.5.1",
+    "plotly.js": "^2.12.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-js-switch": "^1.1.6",
+    "react-katex": "^2.0.2",
     "react-latex": "^2.0.0",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.3.0",
