--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.26.1",
     "chokidar": "^3.5.3",
     "cra-template": "1.1.3",
+    "emailjs-com": "^3.2.0",
     "mathjax3-react": "^1.1.0",
     "mathjs": "^10.5.1",
     "plotly.js": "^2.12.1",
